--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -52,7 +52,7 @@ p {
 
 .my-contacts {
     height: 100vh;
-    width: 80%;
+    width: 800px;
 }
 
 .main-container {
@@ -60,9 +60,6 @@ p {
     text-align: center;
     display: grid;
     justify-items: center;
-    /* position: relative;
-    top: 50%;
-    transform: translateY(-50%); */
 }
 
 .grid {
