Add contact cards to the beginning of the list

--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -76,7 +76,7 @@ p {
     border: 1px solid rgba(58, 58, 58, 0.3);
     background-color: #222739;
     border-radius: 5px;
-    animation: appear 0.3s ease-in;
+    animation: appear 0.25s ease-in;
     transition: border 0.25s ease-in-out;
     padding: 10px 15px;
 }
@@ -88,7 +88,7 @@ p {
 .my-contacts h1 {
     font-size: 23px;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin: 20px 0px;
 }
 
 .form {
